# calamus

./: .clang-format  CMakeLists.txt  HACKING.md  README.md  SCRIPTING.md  config.toml
cmake/: options.cmake  packages.cmake
include/file/: resources.h  toml-config.h
include/graphics/: camera.h  image.h  render_layer.h  render_listener.h  renderer.h  texture.h  window.h
include/input/: input_listener.h  key.h
include/resources/: enums.h  fonts.h  level.h  state.h  textures.h  tilemap.h
include/script/: chunk.h  compiler.h  debug.h  memory.h  object.h  scanner.h  source_location.h  table.h  value.h  vm.h
include/script_legacy/: chunk.h  compiler.h  config.h  debug.h  memory.h  object.h  source_location.h  table.h  value.h  vm.h
include/ui/: alignment.h  orientation.h  structs.h  ui_button.h  ui_label.h  ui_object.h  ui_screen.h
include/ui/layout/: fixed_layout.h  grid_layout.h  layout.h
include/util/: assert.h  common.h  files.h  formatter.h  logging.h  print.h  reader.h  result.h  scoped_timer.h  time.h  typename.h  types.h
include/util/raylib/: raylib_extensions.h  raylib_formatter.h  raylib_wrapper.h
res/fonts/: fonts.toml
res/textures/: cursor.toml  tilemap.toml
src/: main.cpp
src/file/: resources.cpp  toml-config.cpp
src/graphics/: renderer.cpp  texture.cpp  window.cpp
src/resources/: fonts.cpp  level.cpp  textures.cpp
src/script/: chunk.cpp  compiler.cpp  debug.cpp  memory.cpp  object.cpp  scanner.cpp  table.cpp  value.cpp  vm.cpp
src/script_legacy/: chunk.cpp  compiler.cpp  debug.cpp  memory.cpp  object.cpp  scanner.cpp  table.cpp  value.cpp  vm.cpp
src/ui/: ui_button.cpp  ui_label.cpp  ui_screen.cpp
src/ui/layout/: fixed_layout.cpp  grid_layout.cpp
src/util/: files.cpp
src/util/raylib/: raylib_wrapper.cpp
test/: CMakeLists.txt  test_basiccolor.cpp  test_file.cpp  test_position.cpp  test_rect.cpp  test_result.cpp  test_size.cpp
test/script/: test_basic.cpp
